opam-version: "2.0"
maintainer: "anonymous@example.com"
homepage: "example.com"
bug-reports: "example.com"
authors: "Anonymous <anonymous@example.com>"
build: [
  [make "-j%{jobs}%"]
]
install: [
  [make "install"]
]
depends: [
  "coq" {>= "8.13" & < "8.14~"}
  "coq-metacoq-pcuic" {= "1.0~beta2+8.13"}
  "coq-elpi"
  "coq-hammer"
  "coq-itauto"
  "coq-mathcomp-algebra"
  "coq-mathcomp-zify"
]
synopsis: "This is the source code accompanying the submission entitled \"Compositional pre-processing for automated reasoning in dependent type theory\""
